# trading_sim

./: .gitignore  README.md  shell.nix  trading-sim.cabal
rust/stock_data/: Cargo.toml
rust/stock_data/src/: lib.rs
src/: Main.hs  Simulation.hs  StockData.hs  Types.hs  UI.hs
