cabal-version:      2.4
name:               trading-sim
version:            0.1.0.0

executable trading-sim
  main-is:          Main.hs
  build-depends:    base ^>=4.14.3.0
                  , aeson
                  , bytestring
                  , text
                  , containers
                  , stm
                  , random
                  , time
                  , ansi-terminal
                  , brick
                  , vty
                  , vector
  hs-source-dirs:   src
  default-language: Haskell2010
  extra-libraries:  stock_data
  extra-lib-dirs:   rust/stock_data/target/release
  ghc-options:      -Wall -threaded
